# so-sysinfo

./: Cargo.toml  LICENSE  README.md
src/: app.rs  args.rs  logos.rs  main.rs  utils.rs
src/collection/: mod.rs  system_components.rs  utils.rs
src/collection/system_components/: impl_macos.rs  impl_windows.rs  mod.rs
src/model_impl/: macos.rs  mod.rs
