[package]
name = "so-sysinfo"
version = "0.6.0"
edition = "2021"
authors = ["IAMSolaara"]
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
human_bytes = "0.4"
lazy_static = "1.5"
libmacchina = "7.3"
os_info = "3.8"
ratatui = "0.28"
strum = "0.26"
sysinfo = "0.31"
tracing = "0.1"
tui-nodes = "0.6"

[profile.release]
strip = true
lto = true
opt-level = "z"
