[package]
name = "so-sysinfo"
version = "0.8.0"
edition = "2021"
authors = ["IAMSolaara"]
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
human_bytes = "0.4"
lazy_static = "1.5"
libmacchina = "7.3"
num_cpus = "1.16"
os_info = "3.8"
ratatui = "0.28"
strum = "0.26"
sysinfo = "0.31"
tracing = "0.1"
#tui-nodes = { git = "https://git.sr.ht/~iamsolaara/tui-nodes", branch = "main" }
tui-nodes = { path = "../tui-nodes-myfork/" }

[dev-dependencies]
testresult = "0.4"
tracing-test = "0.2"

[profile.release]
strip = true
lto = true
opt-level = "z"
